[metadata]
name = drf-spectacular
version = attr: drf_spectacular.__version__
author = T. Franzel
author_email = tfranzel@gmail.com
license = BSD
description = Sane and flexible OpenAPI 3 schema generation for Django REST framework
url = https://github.com/tfranzel/drf-spectacular
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Documentation
    Topic :: Software Development :: Code Generators
project_urls =
    Source = https://github.com/tfranzel/drf-spectacular
    Documentation = https://drf-spectacular.readthedocs.io

[options]
install_requires =
    Django>=2.2
    djangorestframework>=3.10.3
    uritemplate>=2.0.0
    PyYAML>=5.1
    jsonschema>=2.6.0
    inflection>=0.3.1
    typing-extensions; python_version < "3.10"
packages = find:
include_package_data = True
python_requires = >=3.6

[options.extras_require]
offline = drf-spectacular-sidecar
sidecar = drf-spectacular-sidecar
